20150914 1958CST marked up doc

--- a/20150914Notes.md
+++ b/20150914Notes.md
@@ -1,20 +1,21 @@
+##Bourbon Street, Part 2
 20150914 1942CST
 
 Notes from Last Session:
 Spoke with 2 loa from my list. The List:
-Rada:
-Legba, - Get his Bar, Legba's, started. 
-Loco, 
-Ayizan, 
-Anaisa Pye, 
-Damballa, 
-Ayida-Weddo, 
-Erzulie, 
-Agwé.
+###Rada:
+[Legba](https://en.wikipedia.org/wiki/Papa_Legba), - Get his Bar, Legba's, started. 
+[Loco](https://en.wikipedia.org/wiki/Loco_(loa)), 
+[Ayizan](https://en.wikipedia.org/wiki/Ayizan), 
+[Anaisa Pye](https://en.wikipedia.org/wiki/Anaisa_Pye), 
+[Damballa](https://en.wikipedia.org/wiki/Damballa), 
+[Ayida-Weddo](https://en.wikipedia.org/wiki/Ayida-Weddo), 
+[Erzulie](https://en.wikipedia.org/wiki/Erzulie), 
+[Agwé.](https://en.wikipedia.org/wiki/Agw%C3%A9)
 Freda (danto's sis)
 
-Petro
+###Petro
 Danto-
-Alum Raucous 
-Ezilie - indoor basketball court, weight room, breakdancing, graffiti 
+Alum Raucous -
+Ezilie (also a Rada Loa) - indoor basketball court, weight room, breakdancing, graffiti 
 
