20150914 2202CST notes updated at end of adventure

--- a/20150914Notes.md
+++ b/20150914Notes.md
@@ -1,3 +1,36 @@
+#Plan LoWard
+Plan LoWard
+
+
+I'll go through a list of the loa (below) offer them their traditional gifts, and ask What do you wish you received more often to win your favor?
+
+Who are your favorite 3 practitioners/families in New Orleans?
+
+What would you like to see in a permanent shrine dedicated specifically to you?
+
+Which other Loa would you like to see with an increased presence in New Orleans?
+
+If I build you that shrine and inform those followers of yours that I will provision it, will you assist in its defense?
+
+Are you amenable to working with a White Council approved thaumaturge who resides in your shrine to defend, augment, and improve it? -working with here means an agreement to not tempt the individual toward breaking any laws of magic or interfering with other work they may have, as long as they check in with you once a week and complete any reasonable requests.
+
+Are you willing to sign a contract to that effect under the unseelie accords, in the local accorded neutral grounds, with a local notary on hand to witness?
+
+
+List I'd go down:
+Types of Loa: (http://en.wikipedia.org/wiki/Loa)
+Rada- older, more beneficent- inner sanctuary. If more than 4 are interested, will acquire and build addl sanctuaries. At least 6 open spots if they're interested. Can't imagine 9th ward RE is too expensive these days.
+Petro- more fiery, aggressive and warlike, outer sanctuary
+Nago- Ogoun loa, they get Raik's house and the Overward
+Kongo- Simbi, incl Marinette, split middle circle
+Ghede- Spirits of Dead, split middle circle with Kongo. Suzette has a lot of interest here. Definitely will contact all of them to see if they want shrines and will construct, but i assume the big ones have their graveyards etc and don't need to sign onto anyone's train.
+
+My map currently contains:
+4 inner sanctuaries - room for 6 expansions
+6 middle sanctuaries - room for 8 more
+7 outer sanctuaries - room for 3 more
+
+
 ##Bourbon Street, Part 2
 20150914 1942CST
 
@@ -8,7 +41,7 @@ Spoke with 2 loa from my list. The List:
 
 [Loco](https://en.wikipedia.org/wiki/Loco_(loa)), 
 
-[Ayizan](https://en.wikipedia.org/wiki/Ayizan), 
+[Ayizan](https://en.wikipedia.org/wiki/Ayizan), -Highest places of commerce. 
 
 [Anaisa Pye](https://en.wikipedia.org/wiki/Anaisa_Pye), 
 
@@ -18,14 +51,29 @@ Spoke with 2 loa from my list. The List:
 
 [Erzulie](https://en.wikipedia.org/wiki/Erzulie), 
 
-[Agwé.](https://en.wikipedia.org/wiki/Agw%C3%A9)
+[Agwé.](https://en.wikipedia.org/wiki/Agw%C3%A9), 
 
 Freda (danto's sis)
 
 ###Petro
 Danto-
 
-Alum Raucous -
+Alum Raucous - 
 
-Ezilie (also a Rada Loa) - indoor basketball court, weight room, breakdancing, graffiti 
+Ezilie (also a Rada Loa) - indoor basketball court, weight room, breakdancing, graffiti
 
+
+###Ongoing Notes
+20150914 2004CST
+
+Spoke with Ayizan. Wants representation in our highest places of commerce. 
+
+Went to sleep. 
+
+Woke up normal time, sleepy
+Val comes back
+
+ToDo:
+Set Up Gym for Erzulie
+Set up Bar for Legba
+Save New Orleans from Wild Hunt
